[project]
name = "psd-layers-to-gltf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gimpformats>=2025",
    "psd-tools>=1.10.8",
    "pygltflib>=1.16.5",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.0",
    "ruff>=0.12.7",
]

[tool.uv.sources]
gimpformats = { git = "https://github.com/FHPythonUtils/GimpFormats" }
